[package]
name = "angry-surgeon"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.4"

defmt = "0.3.6"
defmt-rtt = "0.4.0"
panic-probe = "0.3.1"

arraydeque = { version = "0.5.1", default-features = false }
embedded-alloc = "0.5.1"
embedded-sdmmc = { path = "../embedded-sdmmc-rs", features = ["defmt-log"], default-features = false }
microfft = "0.6.0"
micromath = { version = "2.1.0", features = ["num-traits"] }

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy"
features = ["stm32f411ce", "defmt", "time-driver-any", "unstable-pac", "exti"]

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "task-arena-size-32768"]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt", "defmt-timestamp-uptime", "generic-queue"]

[profile.release]
# codegen-units = 1
# incremental = false
debug = "full"
lto = "fat"
opt-level = "s"
