[package]
name = "angry-surgeon"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.4"

defmt = "0.3.6"
defmt-rtt = "0.4.0"
panic-probe = "0.3.1"

aligned = "0.4.2"
arraydeque = { version = "0.5.1", default-features = false }
embedded-alloc = "0.5.1"
embedded-io-async = "0.6.1"
microfft = "0.6.0"
micromath = { version = "2.1.0", features = ["num-traits"] }

[dependencies.embedded-fatfs]
path = "../embedded-fatfs/embedded-fatfs"
features = ["defmt", "lfn"]
default-features = false

[dependencies.block-device-adapters]
git = "https://github.com/MabezDev/embedded-fatfs"
default-features = false

[dependencies.block-device-driver]
git = "https://github.com/MabezDev/embedded-fatfs"
default-features = false

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy"
features = ["stm32f411ce", "defmt", "time-driver-any", "unstable-pac", "exti"]

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "task-arena-size-32768"]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt", "defmt-timestamp-uptime", "generic-queue"]

[profile.release]
# codegen-units = 1
# incremental = false
debug = "full"
lto = "fat"
opt-level = "s"
