[package]
name = "angry-surgeon"
version = "0.1.0"
edition = "2021"

[features]
log-sdio = []

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"

defmt = "0.3.6"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

aligned = "0.4.2"
arraydeque = { version = "0.5.1", default-features = false }
critical-section = "1.1.2"
embedded-alloc = "0.5.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io-async = "0.6.1"
embedded-sdmmc = { git = "https://github.com/peterkrull/embedded-sdmmc-rs", branch = "develop-async" }
fugit = "0.3.7"
portable-atomic = { version = "1.7.0", features = ["critical-section"] }
microfft = { version = "0.6.0", features = ["size-128"], defualt-features = false }
micromath = { version = "2.1.0", features = ["num-traits"] }
static_cell = "2.1.0"
pio-proc = "0.2.2"
pio = "0.2.1"
fixed = "1.28.0"
sdio-host = "0.9.0"
biquad = "0.4.2"

[dependencies.embedded-fatfs]
path = "../embedded-fatfs/embedded-fatfs"
features = ["defmt", "lfn"]
default-features = false

[dependencies.block-device-adapters]
git = "https://github.com/MabezDev/embedded-fatfs"
default-features = false

[dependencies.block-device-driver]
git = "https://github.com/MabezDev/embedded-fatfs"
default-features = false

[dependencies.embassy-rp]
git = "https://github.com/embassy-rs/embassy"
features = ["rp2040", "defmt", "time-driver", "unstable-pac", "critical-section-impl"]

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"]

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt", "defmt-timestamp-uptime", "generic-queue"]

[profile.release]
# codegen-units = 1
# incremental = false
debug = "full"
lto = "fat"
opt-level = "s"
